--- a/package.json
+++ b/package.json
@@ -7,26 +7,32 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/ &&  rm -rf android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw/",
+    "android:build": "cd android && ./gradlew app:assembleRelease"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^4.0.1",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-firebase/firestore": "^17.3.2",
+    "@react-native-firebase/storage": "^17.3.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.24.0",
-    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
-    "react-native-dropdown-picker": "^5.2.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "0.36.2",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-template-": "github:thecodingmachine/react-native-boilerplate",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "react-native-gesture-handler": "^1.10.3"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
