--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -196,6 +196,8 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
+    implementation 'com.google.android.gms:play-services-gcm:+'
+    implementation "com.google.android.gms:play-services-auth:17.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
