--- a/package.json
+++ b/package.json
@@ -14,21 +14,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^4.0.1",
-    "@react-native-firebase/app": "^17.3.2",
-    "@react-native-firebase/auth": "^17.3.2",
-    "@react-native-firebase/firestore": "^17.3.2",
-    "@react-native-firebase/storage": "^17.3.2",
-    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-background-actions": "^3.0.0",
+    "react-native-call-log": "^2.1.2",
+    "react-native-device-number": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "0.36.2",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-sim-cards-manager": "^1.0.10",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
